<resources>
    <string name="app_name">Foodase</string>
    <string name="welcome_to_food_base">Welcome To Food Base</string>
    <string name="discover_resturants_near_you">Discover Resturants Near You!</string>
    <string name="get_food_delivered_to_you_at_the_comfort_of_your_home">Get food delivered to you at the comfort of your home.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="food_base">FOOD BASE</string>
    <string name="hi_welcome_back">Hi, Welcome Back</string>
    <string name="email">Email</string>
    <string name="email2">Email</string>
    <string name="password">Password</string>
    <string name="password2">Password</string>
    <string name="button">Button</string>
    <string name="login1">Login</string>
    <string name="sign_up_now">Sign Up Now!</string>
    <string name="signupnow">Sign up Now</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="default_web_client_id">default_web_client_id</string>
    <string name="search">search</string>
</resources>