<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="267dp"
        android:layout_height="135dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/foodbaseimage"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="172dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/food_base"
        android:textColor="@color/lightblue"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="267dp"
        android:layout_height="56dp"
        android:layout_marginTop="68dp"
        android:gravity="left"
        android:text="@string/hi_welcome_back"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="114dp"
        android:layout_height="32dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="Login"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/email2"
        android:layout_width="333dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/email2"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/password2"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:src="@tools:sample/avatars"
        app:layout_constraintBottom_toBottomOf="@+id/email2"
        app:layout_constraintEnd_toEndOf="@+id/email2"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="@+id/email2"
        app:layout_constraintTop_toTopOf="@+id/email2"
        app:layout_constraintVertical_bias="0.44"
        app:srcCompat="@drawable/emailimage" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:src="@tools:sample/avatars"
        app:layout_constraintBottom_toBottomOf="@+id/password2"
        app:layout_constraintEnd_toEndOf="@+id/password2"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="@+id/password2"
        app:layout_constraintTop_toTopOf="@+id/password2"
        app:layout_constraintVertical_bias="0.448"
        app:srcCompat="@drawable/passwordimage" />

    <Button
        android:id="@+id/btnLogin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/login1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="-----------------OR-----------------"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin1" />

    <Button
        android:id="@+id/btngoogleauth"
        android:layout_width="314dp"
        android:layout_height="68dp"
        android:layout_marginTop="32dp"
        android:text="Login with Google"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/btnForgotPassword"
        android:layout_width="115dp"
        android:layout_height="31dp"
        android:layout_marginTop="12dp"
        android:text="Forgot Password?"
        android:textColor="@color/lightblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password2" />


</androidx.constraintlayout.widget.ConstraintLayout>